# doomstools-svn

doomstools/: liblogtool.h  libnettool.h  libsoundtool.h  libstdtool.h  libxmltool.h  network.h
liblogtool/: Makefile  liblogtool.cpp  liblogtool.h  liblogtool.ncb  liblogtool.sln  liblogtool.vcproj
libnettool/: BUGGGGS_TODO  Makefile  SDLnetsys.h  assign.c  authorize_client.c  call_handler.c  check_select.c  check_select.cpp  check_sockets.c  check_sockets.cpp  close_connection.c  close_connection.cpp  close_socket.c  create_client.c  delete_client.c  free_net.c  free_net.cp  free_net.cpp  init_client.c  init_client.cpp  init_connection.c  init_connection.cpp  init_msg.c  init_msg.cpp  init_nettool.c  insert_client.c  is_quitting.c  libnettool.cpp  libnettool.h  libnettool.ncb  libnettool.sln  libnettool.vcproj  list.c  list.cpp  loss_client.c  loss_client.cpp  move_last_client.c  move_last_player.c  move_last_player.cpp  msg_wait.c  (+15 more)
libsoundtool/: Makefile  libsoundtool.c  libsoundtool.h  soundxstd.c
libstdtool/: Makefile  libstdtool.c  libstdtool.cpp  libstdtool.h  libstdtool.ncb  libstdtool.sln  libstdtool.vcproj
libtagtool/: Makefile.am  autogen.sh  config.h.in  configure.ac
libtagtool/lib/: libtagtool-priv.c  libtagtool-priv.h  libtagtool.c  libtagtool.h
libxmltool/: Makefile  libxmltool.cpp  libxmltool.h  libxmltool.ncb  libxmltool.sln  libxmltool.vcproj
netexemple/: Makefile  SDLnetsys.h  flood.cpp  memoryleaaaks.cpp  net_common.h  netexemple.cpp  netexemple.sln  netexemple.vcproj
soundexemple/: Makefile  soundexemple  soundexemple.cpp
